# jman-rs

./: Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  install.ps1  install.sh
.github/workflows/: release.yml
src/: main.rs  models.rs  paths.rs
src/commands/: env.rs  install.rs  list.rs  list_remote.rs  remove.rs  use_version.rs
src/util/: api.rs  download.rs  extract.rs
